2013-02-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Made template reference parsing greedier - parse everything
    up to the next whitespace, newline, '[', ']', '$' or '#'
    * Printing of warnings to stderr can be disabled

2013-02-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Templates can now expand to a StringBuffer

2013-02-02 Jesper Öqvist <jesper@cs.lth.se>

    * Template expansion warnings are printed to stderr